Tout le logique de la simulation